CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(libfluentd)


SET(CMAKE_CXX_FLAGS_RELEASE "-Wall -O3 -std=c++0x")
SET(CMAKE_CXX_FLAGS_DEBUG   "-Wall -O0 -std=c++0x -g")
SET(CMAKE_SHARED_LINKER_FLAGS "-dynamiclib")

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/lib)

# cmake_policy(SET CMP0015 NEW)

INCLUDE_DIRECTORIES(${INC_DIR} ./src)
LINK_DIRECTORIES(${LIB_DIR})

# Build library

FILE(GLOB BASESRCS "src/*.cc" "src/*.hpp")
FILE(GLOB TESTSRCS "test/*.cc")
FILE(GLOB HEADERS "src/fluentd/*.hpp")

ADD_LIBRARY(fluentd SHARED ${BASESRCS})
TARGET_LINK_LIBRARIES(fluentd msgpack)

ADD_EXECUTABLE(fluentd-test ${TESTSRCS})
TARGET_LINK_LIBRARIES(fluentd-test fluentd)

INSTALL(FILES src/fluentd.hpp DESTINATION include/)
INSTALL(FILES ${HEADERS} DESTINATION include/fluentd)


